name:                rel8
version:             0.1.0.0
synopsis:            A type-safe, expressive and concise API for querying relational databases using Opaleye
license:             BSD3
license-file:        LICENSE
author:              Ollie Charles
maintainer:          ollie@ocharles.org.uk
-- copyright:           
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
Tested-With: GHC == 8.0.2

library
  exposed-modules:     Rel8
                       Rel8.IO
                       Rel8.Internal
                       Rel8.Text
  other-modules:       Rel8.Internal.Aggregate
                       Rel8.Internal.DBType
                       Rel8.Internal.Expr
                       Rel8.Internal.Operators
                       Rel8.Internal.Order
                       Rel8.Internal.Table
                       Rel8.Internal.Types
  other-extensions:    Arrows, ConstraintKinds, DataKinds, DefaultSignatures, DeriveGeneric, FlexibleContexts, FlexibleInstances, FunctionalDependencies, KindSignatures, PolyKinds, ScopedTypeVariables, TypeFamilies, TypeOperators, UndecidableInstances, RankNTypes
  build-depends:       aeson
                     , adjunctions
                     , base >=4.9 && <4.11
                     , bytestring
                     , contravariant
                     , data-default-class
                     , exceptions
                     , free
                     , foldl
                     , hasql
                     , lens
                     , monad-control >= 1.0.1.0 && < 1.1
                     , mtl
                     , one-liner >=0.7 && <0.8
                     , opaleye
                     , pretty
                     , product-profunctors >=0.7 && <0.8
                     , profunctors >=5.2 && <5.3
                     , resourcet >= 1.1.8.1
                     , scientific
                     , streaming >=0.1 && <0.2
                     , tagged >=0.8 && <0.9
                     , text
                     , time
                     , transformers
                     , uuid
                     , vector
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns


test-suite example
           type: exitcode-stdio-1.0
           hs-source-dirs: doc
           main-is: Example.hs
           build-depends: base, rel8